package com.example.imarticus_class_01


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.closeSoftKeyboard
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withParent
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class MainActivity2Test {

    @Rule
    @JvmField
    var mActivityScenarioRule = ActivityScenarioRule(MainActivity2::class.java)

    @Test
    fun mainActivity2Test() {
        val appCompatEditText = onView(
            allOf(
                withId(R.id.edit) ,
                childAtPosition(
                    allOf(
                        withId(R.id.main) ,
                        childAtPosition(
                            withId(android.R.id.content) ,
                            0
                        )
                    ) ,
                    3
                ) ,
                isDisplayed()
            )
        )
        appCompatEditText.perform(replaceText("hello") , closeSoftKeyboard())

        val materialButton = onView(
            allOf(
                withId(R.id.button) , withText("Button") ,
                childAtPosition(
                    allOf(
                        withId(R.id.main) ,
                        childAtPosition(
                            withId(android.R.id.content) ,
                            0
                        )
                    ) ,
                    4
                ) ,
                isDisplayed()
            )
        )
        materialButton.perform(click())

        val materialButton2 = onView(
            allOf(
                withId(R.id.button) , withText("Button") ,
                childAtPosition(
                    allOf(
                        withId(R.id.main) ,
                        childAtPosition(
                            withId(android.R.id.content) ,
                            0
                        )
                    ) ,
                    4
                ) ,
                isDisplayed()
            )
        )
        materialButton2.perform(click())

        val appCompatEditText2 = onView(
            allOf(
                withId(R.id.edit) , withText("hello") ,
                childAtPosition(
                    allOf(
                        withId(R.id.main) ,
                        childAtPosition(
                            withId(android.R.id.content) ,
                            0
                        )
                    ) ,
                    3
                ) ,
                isDisplayed()
            )
        )
        appCompatEditText2.perform(replaceText("hello"))

        val appCompatEditText3 = onView(
            allOf(
                withId(R.id.edit) , withText("hello") ,
                childAtPosition(
                    allOf(
                        withId(R.id.main) ,
                        childAtPosition(
                            withId(android.R.id.content) ,
                            0
                        )
                    ) ,
                    3
                ) ,
                isDisplayed()
            )
        )
        appCompatEditText3.perform(closeSoftKeyboard())

        val textView = onView(
            allOf(
                withId(R.id.textView8) , withText("hello") ,
                withParent(
                    allOf(
                        withId(R.id.main) ,
                        withParent(withId(android.R.id.content))
                    )
                ) ,
                isDisplayed()
            )
        )
        textView.check(matches(withText("hello")))
    }

    private fun childAtPosition(
        parentMatcher: Matcher<View> , position: Int
    ): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent)
                        && view == parent.getChildAt(position)
            }
        }
    }
}
